# flyg-format

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
test_data/: compressed.cflyg  uncompressed.flyg
