[package]
name = "flyg-format"
description = "The Rust implementation for the Flyg file format"
authors = ["Tim Janke <tim+github@janke.biz>"]
version = "2021.12.25"
edition = "2021"
rust-version = "1.57"

[features]
default = ["compression"]
compression = ["libflate"]

[dependencies.serde]
version = "1.0.132"
default-features = false
features = ["serde_derive"]

[dependencies.serde_json]
version = "1.0.73"
default-features = false
features = ["std"]

[dependencies.libflate]
version = "1.1.1"
default-features = false
optional = true